syntax = 'proto3';
option go_package = "./service";

import "google/protobuf/wrappers.proto";
import "google/rpc/status.proto";

message Note {
  int32 id = 1;
  string name = 2;
  string body = 3;
}

message Dir {
  int32 id = 1;
  string name = 2;
}

message NoteUpdateRequest {
  string name = 1;
  string body = 2;
  int32 id = 3;
}

message SearchResponse { repeated Note notes = 1; }

service Storage {
  rpc GetNote(google.protobuf.Int32Value) returns (Note) {}
  rpc GetDir(google.protobuf.Int32Value) returns (Dir) {}
  rpc CreateNote(Note) returns (google.rpc.Status) {}
  rpc UpdateNote(NoteUpdateRequest) returns (google.rpc.Status) {}
  rpc CreateDir(Dir) returns (google.rpc.Status) {}
  rpc DeleteDir(google.protobuf.Int32Value) returns (google.rpc.Status) {}
  rpc DeleteNote(google.protobuf.Int32Value) returns (google.rpc.Status) {}
  rpc Search(google.protobuf.StringValue) returns (SearchResponse) {}
}
